# seabird

./: .gitignore  D146a002.CNV  D146a002.nc  HISTORY.rst  pyproject.toml
seabird/: __init__.py  cnv.py
tests/: test_rules.py
