[build-system]
requires = [
  "setuptools>=77.0.0",
  "setuptools_scm[toml]>=6.2",
  "wheel>=0.29.0",
]
build-backend = "setuptools.build_meta"


[project]
name = "seabird"
dynamic = ["version"]
description = "Parser for Sea-Bird's CTD and TSG"
readme = "README.rst"
requires-python = ">=3.8"

# SPDX license expression (recommended)
license = "BSD-3-Clause"
license-files = ["LICENSE.rst"]

keywords = [
  "oceanography",
  "ocean data",
  "CTD",
  "TSG",
  "SeaBird",
  "hydrography",
  "parser",
]

authors = [
  { name = "Guilherme Castelão", email = "guilherme@castelao.net" }
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Natural Language :: English",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering"
]

dependencies = [
  "numpy>=1.14",
  "click>=6.6",
  "matplotlib>=3.7.5",
  "netcdf4>=1.7.2",
  "xarray>=2023.1.0",
  "gsw>=3.6.20",
]


[project.optional-dependencies]
test = [
  "hypothesis>=6.29.3",
  "pytest>=7.0.0",
  "pytest-cov>=5.0.0",
  "pip>=9.0.1",
  "flake8>=3.2.1",
  "tox>=2.3.3",
  "coverage>=4.2",
  "supportdata>=0.1.2",
  "twine>=1.8.1",
]

CDF = [
  "netCDF4>=1.4",
]

QC = [
  "cotede>=0.20.2",
]


[project.urls]
Repository = "https://github.com/castelao/seabird"


[project.scripts]
seabird = "seabird.cli:cli"


[tool.black]
line-length = 88


[tool.setuptools_scm]
write_to = "seabird/version.py"
fallback_version = "0.0.0"
git_describe_command = "git describe --dirty --tags --long --match 'v*' --first-parent"


[tool.setuptools.package-data]
seabird = ["rules/*.json"]

[tool.setuptools.packages.find]
include = ["seabird*"]
exclude = ["binder*", "sampledata*"]
